# Encode-Decode-Project

./: README.md
Encoder-Decoder-System/: Encoder-Decoder-System.sln
Encoder-Decoder-System/Encoder-Decoder-System/: Block.cpp  Block.h  CMakeLists.txt  Encoder-Decoder-System.cpp  Encoder-Decoder-System.vcxproj  Encoder-Decoder-System.vcxproj.filters  Encoder.cpp  Encoder.h  Error_Injection.h  Field.cpp  Field.h  Field_Element.cpp  Field_Element.h  File_Decoder.cpp  File_Decoder.h  File_Encoder.cpp  File_Encoder.h  Fileio.cpp  Fileio.h  Generator_polynomial.cpp  Generator_polynomial.h  Logger.cpp  Logger.h  Mixing.cpp  Mixing.h  Polynomial.cpp  Polynomial.h  audio.opus  decoder.h  logfile.txt  logfile_2024-09-08_16_54_35.txt  logfile_2024-09-08_17_43_30.txt  logfile_2024-09-08_17_50_04.txt  logfile_2024-09-08_19_07_45.txt  logfile_2024-09-08_19_10_17.txt  logfile_2024-09-08_20_16_33.txt  logfile_2024-09-08_20_21_08.txt  logfile_2024-09-09_09_21_26.txt  logfile_2024-09-09_09_22_25.txt  logfile_2024-09-09_09_22_30.txt  (+20 more)
Encoder-Decoder-System/Sample-Test1/: E2E_Tests.cpp  Sample-Test1.vcxproj  Test_Utility.cpp  Test_Utility.h  Unit_Test.cpp  Unit_Tests.cpp  logfile.txt  logfile_2024-09-08_15_13_17.txt  logfile_2024-09-08_15_21_44.txt  logfile_2024-09-08_15_22_47.txt  logfile_2024-09-08_15_23_47.txt  logfile_2024-09-08_15_26_52.txt  logfile_2024-09-08_15_43_54.txt  logfile_2024-09-08_15_45_01.txt  logfile_2024-09-08_15_46_24.txt  logfile_2024-09-08_15_47_15.txt  logfile_2024-09-08_15_48_28.txt  logfile_2024-09-08_15_48_50.txt  logfile_2024-09-08_15_53_03.txt  (+63 more)
